oxiplate-derive/tests/broken/strings/string-span.stderr
error[E0308]: mismatched types
 --> tests/broken/strings/string-span.rs:4:38
  |
4 | #[oxiplate_inline(r#"{{ "foo".repeat("bar") }}"#)]
  |                               ------ ^^^^^ expected `usize`, found `&str`
  |                               |
  |                               arguments to this method are incorrect
  |
note: method defined here
 --> $RUST/alloc/src/str.rs
  |
  |     pub fn repeat(&self, n: usize) -> String {
  |            ^^^^^^
